--- a/ProjetoEcommerce2/appsettings.json
+++ b/ProjetoEcommerce2/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conexaoMySQL": "server=localhost;database=dbLima;user=root;password=12345678"
+    "conexaoMySQL": "server=localhost;database=dbArthur;user=root;password=12345678"
   }
 }
